# GGD-OpenSpaceNet

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt~  OpenSkyNet.cpp  OpenSkyNet.h  OpenSkyNetArgs.cpp  OpenSkyNetArgs.h  OpenSkyNetVersion.h  OpenSpaceNetVersion.h  README.md  index.html  main_old.cpp
App/: CMakeLists.txt  main.cpp  version.h.in
App/include/: OpenSkyNet.h  OpenSkyNetArgs.h  OsnRequest.h  OsnServer.h  WorkItem.h  libopenskynet.h
App/src/: OpenSkyNet.cpp  OsnRequest.cpp  OsnServer.cpp  WorkItem.cpp  libopenskynet.cpp
cli/: CMakeLists.txt  ParseCLIArgs.cpp  ParseCLIArgs.h  main.cpp
cli/include/: ParseCLIArgs.h
cli/src/: CLIArgsParser.cpp  CLIArgsParser.h  CliArgsParser.cpp  CliArgsParser.h  CliProcessor.cpp  CliProcessor.h  ParseCLIArgs.cpp  ParseCLIArgs.h  main.cpp  version.h.in
cmake/: InstallHeaders.cmake
cmake/Modules/: FindDeepCore.cmake
common/: CMakeLists.txt  version.h.in
common/include/: OpenSpaceNet.h  OpenSpaceNetArgs.h
common/src/: OpenSpaceNet.cpp
doc/: BUILDING.md  REFERENCE.md  modelsize.ong
gui/: CMakeLists.txt  configparser.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  processthread.cpp  processthread.h  progresswindow.cpp  progresswindow.h  progresswindow.ui  qdebugstream.h
gui/include/: mainwindow.h
gui/src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  OSNModelThread.cpp  OSNModelThread.h  OSNProcessingThread.cpp  OSNProcessingThread.h  OSNProgressDisplay.cpp  OSNProgressDisplay.h  OsnProcessingThread.cpp  OsnProcessingThread.h  ProgressWindow.cpp  QDebugStream.cpp  QDebugStream.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  progresswindow.cpp  progresswindow.h  progresswindow.ui  qdebugstream.h
gui/tests/: CMakeLists.txt  localFileValidRun_test.cpp
libopenskynet/: CMakeLists.txt  OpenSkyNet.h
openskynet/: CMakeLists.txt  OpenSkyNet.cpp  OpenSkyNetArgs.h
openskynet/include/: OpenSkyNet.h  OpenSkyNetArgs.h  WorkItem.h
openskynet/src/: OpenSkyNet.cpp  OpenSkyNetArgs.cpp  WorkItem.cpp  libopenskynet.cpp
openspacenet/: CMakeLists.txt
openspacenet/include/: OpenSpaceNet.h  OpenSpaceNetArgs.h
openspacenet/src/: OpenSpaceNet.cpp
src/: OpenSkyNet.cpp  OpenSkyNet.h  OpenSkyNetArgs.cpp  OpenSkyNetArgs.h  OpenSpaceNet.cpp  OpenSpaceNet.h  OpenSpaceNetArgs.cpp  OpenSpaceNetArgs.h  main.cpp  version.h.in
ui/: OpenSkyNetGUI.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
website/documentation/html/: _apache_tomcat_error_8h_source.html  _block_read_func_8h_source.html  _buffered_feature_set_8h_source.html  _caffe_batch_classifier_8h_source.html  _caffe_model_metadata_8h_source.html  _caffe_model_metadata_json_8h_source.html  _caffe_model_package_8h_source.html  _call_stack_8h_source.html  _call_stack_reader_8h_source.html  _classifier_8h_source.html  _console_8h_source.html  _cv_conversions_8h_source.html  _cv_to_log_8h_source.html  _dc_math_8h_source.html  _detector_8h_source.html  _dg_wmts_client_8h_source.html  _dgcs_client_8h_source.html  _embedded_resource_8h_source.html  _error_8h_source.html  _error_func_8h_source.html  _evwhs_client_8h_source.html  _feature_8h_source.html  _feature_set_8h_source.html  _filter_labels_8h_source.html  _gbdx_model_reader_8h_source.html  _gbdx_model_writer_8h_source.html  _gbdxm_common_8h_source.html  _gdal_image_8h_source.html  _geo_image_8h_source.html  _http_cleanup_8h_source.html  _http_downloader_8h_source.html  _http_error_8h_source.html  _image_downloader_8h_source.html  _image_read_mode_8h_source.html  _init_gdal_data_8h_source.html  _json_message_8h_source.html  _json_object_8h_source.html  _json_rpc_8h_source.html  _json_rpc_error_8h_source.html  _json_rpc_request_8h_source.html  (+588 more)
website/documentation/latex/: annotated.tex  class_point_feature.tex  class_polygon_feature.tex  class_pyramid_image_slicer_iterato.tex  classboost_1_1program__options_1_1bounded__typed__value.tex  classdg_1_1deepcore_1_1_call_stack_reader.tex  classdg_1_1deepcore_1_1_error.tex  classdg_1_1deepcore_1_1_logger.tex  classdg_1_1deepcore_1_1_multi_progress_display.tex  classdg_1_1deepcore_1_1_singleton.tex  classdg_1_1deepcore_1_1_un_zip_file.tex  classdg_1_1deepcore_1_1_zip_file.tex  classdg_1_1deepcore_1_1classification_1_1_caffe_batch_classifier.tex  classdg_1_1deepcore_1_1classification_1_1_caffe_batch_classifier__coll__graph.md5  classdg_1_1deepcore_1_1classification_1_1_caffe_model_metadata_json.tex  classdg_1_1deepcore_1_1classification_1_1_caffe_model_metadata_json__coll__graph.md5  classdg_1_1deepcore_1_1classification_1_1_caffe_model_package.tex  classdg_1_1deepcore_1_1classification_1_1_caffe_model_package__coll__graph.md5  classdg_1_1deepcore_1_1classification_1_1_classifier.tex  classdg_1_1deepcore_1_1classification_1_1_detector.tex  classdg_1_1deepcore_1_1classification_1_1_gbdx_model_reader.tex  classdg_1_1deepcore_1_1classification_1_1_gbdx_model_writer.tex  classdg_1_1deepcore_1_1classification_1_1_model.tex  classdg_1_1deepcore_1_1classification_1_1_model_metadata.tex  classdg_1_1deepcore_1_1classification_1_1_model_metadata_json.tex  classdg_1_1deepcore_1_1classification_1_1_model_metadata_t.tex  classdg_1_1deepcore_1_1classification_1_1_model_metadata_t__coll__graph.md5  classdg_1_1deepcore_1_1classification_1_1_model_package.tex  classdg_1_1deepcore_1_1classification_1_1_model_package_t.tex  classdg_1_1deepcore_1_1classification_1_1_model_package_t__coll__graph.md5  classdg_1_1deepcore_1_1classification_1_1_sliding_window_detector.tex  classdg_1_1deepcore_1_1classification_1_1_sliding_window_detector__coll__graph.md5  classdg_1_1deepcore_1_1imagery_1_1_dg_wmts_client.tex  classdg_1_1deepcore_1_1imagery_1_1_dg_wmts_client__coll__graph.md5  classdg_1_1deepcore_1_1imagery_1_1_gdal_image.tex  classdg_1_1deepcore_1_1imagery_1_1_gdal_image__coll__graph.md5  classdg_1_1deepcore_1_1imagery_1_1_geo_image.tex  classdg_1_1deepcore_1_1imagery_1_1_geo_image__coll__graph.md5  classdg_1_1deepcore_1_1imagery_1_1_image_batch.tex  classdg_1_1deepcore_1_1imagery_1_1_image_downloader.tex  (+119 more)
website/stylesheets/: stylesheet.css
(+273 files in other folders)
